# genie

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CMakeListsGoogleTest.txt.in  CMakeLists_gabac.txt.in  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Dockerfile  Doxyfile.in  LICENSE  NEWS  PULL_REQUEST_DOCUMENTATION.md  PULL_REQUEST_TEMPLATE.md  README  README.md  ROADMAP.md  SPECS.md  SRS.md  TODO.md  USAGE.md  USAGE_POLICY.md  azure-pipelines.yml  boilerplate.txt  config.dsgcfg  conformance_tests.py  fourteen-records.genie  fourteen-records.genie.new_1.fastq  fourteen-records.genie.new_2.fastq  genie  genie.py  makeall.sh  qodana.yaml  removebuild.sh
descriptor-stream-generator/: CMakeLists.txt
descriptor-stream-generator/source/: dsg.cc
descriptor-stream-generator/source/input/: File.cc  File.h
encoder/: CMakeLists.txt
encoder/source/: encoder.cc
source/apps/genie/: CMakeLists.txt  ProgramOptions.cc  StreamLoader.cc  StreamLoader.h  StreamSaver.cc  StreamSaver.h  StreamStoreman.cc  StreamStoreman.h  constants.h  dsg.cc  exceptions.cc  exceptions.h  gabac_integration.cc  gabac_integration.h  generation.cc  generation.h  genie_file_format.cc  genie_file_format.h  program-options.cc  program-options.h  stream-saver.cc  stream-saver.h  thread_pool.cc  thread_pool.h  utilities.cc  utilities.h
source/apps/ureads-encoder/: CMakeLists.txt  EncodingParameters_tests.cpp  data-units-test.cc  encoding-parameters-tests.cc  encoding.cc  encoding.cpp  encoding.h  exceptions.cc  exceptions.cpp  exceptions.h  fastq-file-reader.cc  fastq-file-reader.h  fastq-record.cc  file-reader.cc  (+32 more)
source/coding/: CMakeLists.txt  CoderConstants.h  ReturnStructures.cpp  ReturnStructures.h  dummy.cpp
source/conformance/: CMakeLists.txt  encoding.cpp  encoding.h  exceptions.cpp  exceptions.h  fastq_file_reader.cc  fastq_file_reader.cpp  fastq_file_reader.h  fastq_record.cc  fastq_record.cpp  fastq_record.h  file.cpp  file.h  file_reader.cc  file_reader.cpp  file_reader.h  genie_gabac_output_stream.cc  genie_gabac_output_stream.cpp  genie_gabac_output_stream.h  input_file.cpp  input_file.h  log.cpp  log.h  logger.h  main.cpp  output_file.cpp  output_file.h  program_options.cpp  program_options.h
source/format/: AccessUnitTree.c  AccessUnitTree.h  Boxes.c  Boxes.h  CMakeLists.txt  ClassesSet.c  ClassesSet.h  DescriptorTreeNode.c  DescriptorTreeNode.h  EncodingParameters.h  EncodingParameters_tests.h  portability.h  rbtree.h  treeUint64.c  treeUint64.h  utilTree.h  utils.c  utils.h  vector.c  vector.h  vectorUint64.h
source/genie/: CMakeLists.txt  FastaFileReader.cc  FastaFileReader.h  FastaRecord.cc  FastqFileReader.cc  FastqFileReader.h  FastqRecord.cc  FileReader.cc  FileReader.h  ProgramOptions.cc  ProgramOptions.h  SamFileReader.cc  SamFileReader.h  SamRecord.cc  SamRecord.h  StreamStoreman.cc  StreamStoreman.h  dsg.cc  exceptions.cc  exceptions.h  gabac_integration.cc  gabac_integration.h  generation.cc  generation.h  genie_file_format.cc  genie_gabac_output_stream.cc  genie_gabac_output_stream.h  thread_pool.cc  utilities.cc  utilities.h
src/calq/: CMakeLists.txt  calq.h  calq_coder.cc  calq_coder.h  circular_buffer.h  error_exception_reporter.h  exceptions.cc  filter_buffer.cc  filter_buffer.h  genotyper.cc  genotyper.h  haplotyper.cc  haplotyper.h  lloyd_max_quantizer.cc  lloyd_max_quantizer.h  log.cc  probability_distribution.cc  probability_distribution.h  qual_decoder.cc  qual_decoder.h  qual_encoder.cc  qual_encoder.h  quantizer.cc  quantizer.h  sam_pileup.cc  sam_pileup_deque.cc  sam_pileup_deque.h  softclip_spreader.cc  softclip_spreader.h  uniform_min_max_quantizer.cc  uniform_min_max_quantizer.h  uniform_quantizer.cc  uniform_quantizer.h
src/genie/: CMakeLists.txt
src/libs/: CMakeLists.txt
test/: CMakeLists.txt  conformance-test-spring.sh  conformance_test_lae.sh  genie_conformance.sh  genie_roundtrip.sh  single_conformance_test.sh
test/annotation/: CMakeLists.txt  annotation-contact-test.cc  annotation-test.cc  helpers.cc  helpers.h
test/annotationAccessUnitTest/: CMakeLists.txt  annotationAccessUnit-test.cc  blockTests.cc
test/annotationEncodingParametersTest/: CMakeLists.txt  RandomRecordFillIn.cc  RandomRecordFillIn.h  annotationEncodingParameters-test.cc
test/annotationParameterSetTest/: AlgorithmParametersTests.cc  AnnotationEncodingParametersTests.cc  AttributeParameterSetTests.cc  CMakeLists.txt  CompressorParameterSetTests.cc  ContactMatrixTests.cc  DescriptorConfigurationTests.cc  GenotypeParametersTests.cc  LikelihoodTests.cc  RandomRecordFillIn.cc  RandomRecordFillIn.h  TileConfigurationTests.cc  TileStructureTests.cc  annotationParameterSet-test.cc  payloadStream-test.cc
test/conformance/: CMakeLists.txt  conformance-test.cc  geno-conformance-test.cc  helpers.cc  helpers.h  site-conformance-test.cc
test/contact/: CMakeLists.txt  encode_test.cc  helpers.cc  structure_test.cc
test/core/: CMakeLists.txt  ndarray-test.cc
test/entropy/: CMakeLists.txt  bsc-test.cc  jbig-test.cc  lzma-test.cc  rans-test.cc  zstd-test.cc
test/example/: example-test.cc
test/genotype/: CMakeLists.txt  encode-test.cc  encode_test.cc  structure_test.cc
test/libs/: CMakeLists.txt
test/likelihood/: CMakeLists.txt  encode-test.cc
test/mpeggBSCTest/: CMakeLists.txt  mpeggBSCTest.cc
test/records/: CMakeLists.txt  annotationAccessUnit-test.cc  blockTests.cc  contact-test.cc  helpers.cc  helpers.h  variant_genotype-test.cc  variant_site-test.cc
test/tileConfigurationTest/: CMakeLists.txt  tileConfiguration-test.cc
test/variantGenotypeRecordTest/: CMakeLists.txt  variantGenotypeRecord-test.cc
test/variantRecordTest/: CMakeLists.txt  variantRecord-test.cc
test/variantSiteRecordTest/: CMakeLists.txt  JsonInfoFieldParser-test.cc  payloadStream-test.cc  variantSiteRecord-test.cc
tests/: CMakeLists.txt  example_test.cpp  main.cpp
tests/example/: CMakeLists.txt  example-test.cc  main.cpp
tests/format/: EncodingParameters_tests.cpp  example_test.cpp
tests/gabac_tests/: CMakeLists.txt  example_test.cpp  main.cpp
tests/libs/: CMakeLists.txt
(+4038 files in other folders)
