#add_subdirectory(core)
#add_subdirectory(annotationParameterSetTest)
#add_subdirectory(variantSiteRecordTest)
add_subdirectory(example)
add_subdirectory(records)
add_subdirectory(genotype)
add_subdirectory(likelihood)
add_subdirectory(contact)
add_subdirectory(entropy)
add_subdirectory(conformance)
#add_subdirectory(annotation)

