# Set the paths
set(format "format")
set(format_source_dir ${CMAKE_SOURCE_DIR}/source/format)
set(format_header_dir ${CMAKE_SOURCE_DIR}/source/format)
set(format_include_dir ${CMAKE_SOURCE_DIR}/source/format ${CMAKE_SOURCE_DIR}/source)

# List all source files (alphabetically)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/AccessUnit/AccessUnitContainer.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/AccessUnit/AccessUnitHeader.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/AccessUnit/AccessUnitInformation.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/AccessUnit/AccessUnitProtection.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/Block/BlockContainer.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/Block/BlockHeader.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/Dataset/DatasetContainer.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/Dataset/DatasetHeader.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/Dataset/DatasetMasterIndexTable.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/Dataset/DatasetMetadata.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/Dataset/DatasetParameters.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/Dataset/DatasetProtection.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/DatasetsGroup/DatasetsGroupContainer.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/DatasetsGroup/DatasetsGroupHeader.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/DatasetsGroup/DatasetsGroupLabel.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/DatasetsGroup/DatasetsGroupMetadata.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/DatasetsGroup/DatasetsGroupProtection.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/DatasetsGroup/DatasetsGroupReferenceGenome.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/DatasetsGroup/DatasetsGroupReferenceMetadata.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/File/File.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/File/FileHeader.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/Stream/StreamContainer.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/Stream/StreamHeader.c)
set(format_source_files ${format_source_files} ${format_source_dir}/BoxesDefinitions/Stream/StreamProtection.c)
set(format_source_files ${format_source_files} ${format_source_dir}/DataStructures/BitStreams/InputBitstream.c)
set(format_source_files ${format_source_files} ${format_source_dir}/DataStructures/BitStreams/OutputBitstream.c)
set(format_source_files ${format_source_files} ${format_source_dir}/DataStructures/Signatures/Signature.c)
set(format_source_files ${format_source_files} ${format_source_dir}/DataStructures/Signatures/SignatureInputInteger.c)
set(format_source_files ${format_source_files} ${format_source_dir}/DataStructures/Signatures/Signatures.c)
set(format_source_files ${format_source_files} ${format_source_dir}/DataStructures/Signatures/SignaturesInputStream.c)
set(format_source_files ${format_source_files} ${format_source_dir}/DataStructures/Signatures/SignatureSizeComputation.c)
set(format_source_files ${format_source_files} ${format_source_dir}/DataStructures/Signatures/SignaturesOutputStream.c)
set(format_source_files ${format_source_files} ${format_source_dir}/DataStructures/ByteArray.c)
set(format_source_files ${format_source_files} ${format_source_dir}/DataStructures/EncodingParameters.c)
set(format_source_files ${format_source_files} ${format_source_dir}/DataStructures/FromFile.c)
set(format_source_files ${format_source_files} ${format_source_dir}/DataStructures/Label.c)
set(format_source_files ${format_source_files} ${format_source_dir}/DataUnits/DataUnitAccessUnit.c)
set(format_source_files ${format_source_files} ${format_source_dir}/DataUnits/DataUnitBlockHeader.c)
set(format_source_files ${format_source_files} ${format_source_dir}/DataUnits/DataUnits.c)
set(format_source_files ${format_source_files} ${format_source_dir}/DataUnits/DataUnitsParametersSet.c)
set(format_source_files ${format_source_files} ${format_source_dir}/FileHandlingUtils/FileHandlingUtils.c)
set(format_source_files ${format_source_files} ${format_source_dir}/AccessUnitTree.c)
set(format_source_files ${format_source_files} ${format_source_dir}/AccessUnitTreeNode.c)
set(format_source_files ${format_source_files} ${format_source_dir}/Boxes.c)
set(format_source_files ${format_source_files} ${format_source_dir}/ClassesSet.c)
set(format_source_files ${format_source_files} ${format_source_dir}/DescriptorTreeNode.c)
set(format_source_files ${format_source_files} ${format_source_dir}/FastaReader.c)
set(format_source_files ${format_source_files} ${format_source_dir}/rbtree.c)
set(format_source_files ${format_source_files} ${format_source_dir}/treeUint64.c)
set(format_source_files ${format_source_files} ${format_source_dir}/utils.c)
set(format_source_files ${format_source_files} ${format_source_dir}/vector.c)
set(format_source_files ${format_source_files} ${format_source_dir}/VectorUint64.c)

# List all header files (alphabetically)
set(format_header_files ${format_header_files} ${format_header_dir}/DataStructures/BitStreams/InputBitstream.h)
set(format_header_files ${format_header_files} ${format_header_dir}/DataStructures/BitStreams/OutputBitstream.h)
set(format_header_files ${format_header_files} ${format_header_dir}/DataStructures/Signatures/Signature.h)
set(format_header_files ${format_header_files} ${format_header_dir}/DataStructures/Signatures/SignatureInputInteger.h)
set(format_header_files ${format_header_files} ${format_header_dir}/DataStructures/Signatures/Signatures.h)
set(format_header_files ${format_header_files} ${format_header_dir}/DataStructures/Signatures/SignaturesInputStream.h)
set(format_header_files ${format_header_files} ${format_header_dir}/DataStructures/Signatures/SignatureSizeComputation.h)
set(format_header_files ${format_header_files} ${format_header_dir}/DataStructures/Signatures/SignaturesOutputStream.h)
set(format_header_files ${format_header_files} ${format_header_dir}/DataStructures/FromFile.h)
set(format_header_files ${format_header_files} ${format_header_dir}/DataUnits/DataUnits.h)
set(format_header_files ${format_header_files} ${format_source_dir}/FileHandlingUtils/FileHandlingUtils.h)
set(format_header_files ${format_header_files} ${format_header_dir}/AccessUnitTree.h)
set(format_header_files ${format_header_files} ${format_header_dir}/AccessUnitTreeNode.h)
set(format_header_files ${format_header_files} ${format_header_dir}/Boxes.h)
set(format_header_files ${format_header_files} ${format_header_dir}/ClassesSet.h)
set(format_header_files ${format_header_files} ${format_header_dir}/DescriptorTreeNode.h)
set(format_header_files ${format_header_files} ${format_header_dir}/EncodingParameters.h)
set(format_header_files ${format_header_files} ${format_header_dir}/FastaReader.h)
set(format_header_files ${format_header_files} ${format_header_dir}/portability.h)
set(format_header_files ${format_header_files} ${format_header_dir}/rbtree.h)
set(format_header_files ${format_header_files} ${format_header_dir}/treeUint64.h)
set(format_header_files ${format_header_files} ${format_header_dir}/utils.h)
set(format_header_files ${format_header_files} ${format_header_dir}/utilTree.h)
set(format_header_files ${format_header_files} ${format_header_dir}/vector.h)
set(format_header_files ${format_header_files} ${format_header_dir}/vectorUint64.h)

# Group the source and header files
source_group("format Source Files" FILES ${format_source_files})
source_group("format Header Files" FILES ${format_header_files})

# Set up the target
add_library(${format} STATIC ${format_source_files})
target_include_directories(${format} PRIVATE ${format_include_dir})
